--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
     "    elif(Local_Hour_Angle_Degrees_1_1 > 180):\n",
     "        Local_Hour_Angle_Degrees_1_2 = 540 - LocalHourAngleDegrees1_1\n",
     "\n",
-    "    # We need to choose, which one is the correct solution, here we select it\n",
+    "    # Calculate LHA (H) with a second method, to determine which one is the correct\n",
     "    # cos(H) = (sin(m) - sin(δ) * sin(φ)) / (cos(δ) * cos(φ))\n",
     "    LHAcos = ((np.sin(np.radians(Altitude)) -\n",
     "               np.sin(np.radians(Declination)) * np.sin(np.radians(Latitude))) /\n",
@@ -607,7 +607,7 @@
     "\n",
     "    Local_Hour_Angle_Degrees_2_2 = - Local_Hour_Angle_Degrees_2_1\n",
     "\n",
-    "    # Compare Azimuth values\n",
+    "    # Compare LHA values\n",
     "    # Select correct value for H\n",
     "    if(np.abs(Local_Hour_Angle_Degrees_1_1 - LocalHourAngleDegrees2_1) < 5 or\n",
     "       np.abs(Local_Hour_Angle_Degrees_1_1 - LocalHourAngleDegrees2_2) < 5):\n",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,10 +720,13 @@
     "        # sin(A) = - sin(H) * cos(δ) / cos(m)\n",
     "        # Azimuth at given H Local Hour Angle\n",
     "        Azimuth_1 = np.degrees(np.arcsin(\n",
-    "                   - np.sin(np.radians(Local_Hour_Angle_Degrees)) * np.cos(np.radians(Declination)) /\n",
-    "                   np.cos(np.radians(Altitude))\n",
-    "                   ))\n",
+    "                    - np.sin(np.radians(Local_Hour_Angle_Degrees)) *\n",
+    "                    np.cos(np.radians(Declination)) /\n",
+    "                    np.cos(np.radians(Altitude))\n",
+    "                    ))\n",
     "\n",
+    "        # Normalize negative result\n",
+    "        # Azimuth: [0,+2π[\n",
     "        Azimuth_1, _ = Normalize_Zero_Bounded(Azimuth_1, 360)\n",
     "\n",
     "        if(Azimuth_1 <= 180):\n",
@@ -744,7 +747,7 @@
     "\n",
     "        # Normalize negative result\n",
     "        # Azimuth: [0,+2π[\n",
-    "        Azimuth4 = NormalizeZeroBounded(Azimuth4, 360)\n",
+    "        Azimuth_4, _ = Normalize_Zero_Bounded(Azimuth_4, 360)\n",
     "\n",
     "        # Compare Azimuth values\n",
     "        if(np.abs(Azimuth_1 - Azimuth_3) < 3 or\n",
@@ -773,31 +776,37 @@
     "        # We can calculate eg. setting/rising with the available data (m = 0°), or other things...\n",
     "        # First let's calculate LHA:\n",
     "        # cos(H) = (sin(m) - sin(δ) * sin(φ)) / cos(δ) * cos(φ)\n",
-    "        LHAcos = (math.sin(math.radians(Altitude)) - math.sin(math.radians(Declination)) * math.sin(math.radians(Latitude))) / (math.cos(math.radians(Declination)) * math.cos(math.radians(Latitude)))\n",
+    "        LHAcos = ((np.sin(np.radians(Altitude)) -\n",
+    "                   np.sin(np.radians(Declination)) *\n",
+    "                   np.sin(np.radians(Latitude))) /\n",
+    "                  (np.cos(np.radians(Declination)) *\n",
+    "                   np.cos(np.radians(Latitude))))\n",
     "        if(LHAcos <= 1 and LHAcos >= -1):\n",
-    "            LocalHourAngleDegrees1 = math.degrees(math.acos(LHAcos))\n",
+    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(LHAcos))\n",
     "        elif(LHAcos > 1):\n",
-    "            LocalHourAngleDegrees1 = math.degrees(math.acos(1))\n",
+    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(1))\n",
     "        elif(LHAcos < -1):\n",
-    "            LocalHourAngleDegrees1 = math.degrees(math.acos(-1))\n",
+    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(-1))\n",
     "        \n",
     "\n",
-    "        # acos(x) has two correct output on this interval\n",
+    "        # arccos(x) has two correct output on this interval\n",
     "        LocalHourAngleDegrees2 = - LocalHourAngleDegrees1\n",
     "\n",
     "        # Normalize LHAs:\n",
-    "        LocalHourAngleDegrees1 = NormalizeZeroBounded(LocalHourAngleDegrees1, 360)\n",
-    "        LocalHourAngleDegrees2 = NormalizeZeroBounded(LocalHourAngleDegrees2, 360)\n",
+    "        LocalHourAngleDegrees1 = Normalize_Zero_Bounded(LocalHourAngleDegrees1, 360)\n",
+    "        LocalHourAngleDegrees2 = Normalize_Zero_Bounded(LocalHourAngleDegrees2, 360)\n",
     "\n",
     "        # Calculate Azimuth (A) for both Local Hour Angles!\n",
     "        # Calculate Azimuth (A) for FIRST LOCAK HOUR ANGLE\n",
     "        # sin(A) = - sin(H) * cos(δ) / cos(m)\n",
     "        # Azimuth at given H Local Hour Angle\n",
-    "        Azimuth1_1 = math.degrees(math.asin(\n",
-    "                - math.sin(math.radians(LocalHourAngleDegrees2)) * math.cos(math.radians(Declination)) / math.cos(math.radians(Altitude))\n",
-    "                ))\n",
+    "        Azimuth1_1 = np.degrees(np.arcsin(\n",
+    "                     - np.sin(np.radians(LocalHourAngleDegrees2)) *\n",
+    "                     np.cos(np.radians(Declination)) /\n",
+    "                     np.cos(np.radians(Altitude))\n",
+    "                     ))\n",
     "\n",
-    "        Azimuth1_1 = NormalizeZeroBounded(Azimuth1_1, 360)\n",
+    "        Azimuth1_1 = Normalize_Zero_Bounded(Azimuth1_1, 360)\n",
     "\n",
     "        if(Azimuth1_1 <= 180):\n",
     "            Azimuth1_2 = 180 - Azimuth1_1\n",
@@ -807,16 +816,16 @@
     "\n",
     "        # Calculate Azimuth (A) with a second method, to determine which one is the correct (A1_1 or A1_2?)\n",
     "        # cos(A) = (sin(δ) - sin(φ) * sin(m)) / (cos(φ) * cos(m))\n",
-    "        Azimuth1_3 = math.degrees(math.acos(\n",
-    "                (math.sin(math.radians(Declination)) - math.sin(math.radians(Latitude)) * math.sin(math.radians(Altitude))) / \n",
-    "                (math.cos(math.radians(Latitude)) * math.cos(math.radians(Altitude)))\n",
+    "        Azimuth1_3 = np.degrees(np.arccos(\n",
+    "                (np.sin(np.radians(Declination)) - np.sin(np.radians(Latitude)) * np.sin(np.radians(Altitude))) / \n",
+    "                (np.cos(np.radians(Latitude)) * np.cos(np.radians(Altitude)))\n",
     "        ))\n",
     "\n",
     "        Azimuth1_4 = - Azimuth1_3\n",
     "\n",
     "        # Normalize negative result\n",
     "        # Azimuth: [0,+2π[\n",
-    "        Azimuth1_4 = NormalizeZeroBounded(Azimuth1_4, 360)\n",
+    "        Azimuth1_4 = Normalize_Zero_Bounded(Azimuth1_4, 360)\n",
     "\n",
     "        # Compare Azimuth values\n",
     "        if(Azimuth1_1 + 3 > Azimuth1_3 and Azimuth1_1 - 3 < Azimuth1_3):\n",
@@ -837,11 +846,13 @@
     "        # Calculate Azimuth (A) for SECOND LOCAL HOUR ANGLE\n",
     "        # sin(A) = - sin(H) * cos(δ) / cos(m)\n",
     "        # Azimuth at given H Local Hour Angle\n",
-    "        Azimuth2_1 = math.degrees(math.asin(\n",
-    "                - math.sin(math.radians(LocalHourAngleDegrees1)) * math.cos(math.radians(Declination)) / math.cos(math.radians(Altitude))\n",
-    "                ))\n",
+    "        Azimuth2_1 = np.degrees(np.arcsin(\n",
+    "                     - np.sin(np.radians(LocalHourAngleDegrees1)) *\n",
+    "                     np.cos(np.radians(Declination)) /\n",
+    "                     np.cos(np.radians(Altitude))\n",
+    "                     ))\n",
     "\n",
-    "        Azimuth2_1 = NormalizeZeroBounded(Azimuth2_1, 360)\n",
+    "        Azimuth2_1 = Normalize_Zero_Bounded(Azimuth2_1, 360)\n",
     "\n",
     "        if(Azimuth2_1 <= 180):\n",
     "            Azimuth2_2 = 180 - Azimuth2_1\n",
@@ -851,16 +862,19 @@
     "\n",
     "        # Calculate Azimuth (A) with a second method, to determine which one is the correct (A2_1 or A2_2?)\n",
     "        # cos(A) = (sin(δ) - sin(φ) * sin(m)) / (cos(φ) * cos(m))\n",
-    "        Azimuth2_3 = math.degrees(math.acos(\n",
-    "                (math.sin(math.radians(Declination)) - math.sin(math.radians(Latitude)) * math.sin(math.radians(Altitude))) / \n",
-    "                (math.cos(math.radians(Latitude)) * math.cos(math.radians(Altitude)))\n",
+    "        Azimuth2_3 = np.degrees(np.arccos(\n",
+    "                    (np.sin(np.radians(Declination)) -\n",
+    "                     np.sin(np.radians(Latitude)) *\n",
+    "                     np.sin(np.radians(Altitude))) / \n",
+    "                    (np.cos(np.radians(Latitude)) *\n",
+    "                     np.cos(np.radians(Altitude)))\n",
     "        ))\n",
     "\n",
     "        Azimuth2_4 = - Azimuth2_3\n",
     "\n",
     "        # Normalize negative result\n",
     "        # Azimuth: [0,+2π[\n",
-    "        Azimuth2_4 = NormalizeZeroBounded(Azimuth2_4, 360)\n",
+    "        Azimuth2_4 = Normalize_Zero_Bounded(Azimuth2_4, 360)\n",
     "\n",
     "        # Compare Azimuth values\n",
     "        if(Azimuth2_1 + 3 > Azimuth2_3 and Azimuth2_1 - 3 < Azimuth2_3):\n",
@@ -1164,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,15 +1222,7 @@
     "\n",
     "    RightAscensionSun /= 15\n",
     "\n",
-    "    # 6./a Declination of the Sun (δ) (Wikipedia)\n",
-    "    # DeclinationSun (δSun) is the Declination of the Sun\n",
-    "    # 23.44° is Earth's maximum Axial Tilt toward's the Sun\n",
-    "    #DeclinationSun = math.degrees(math.asin(\n",
-    "    #       math.sin(math.radians(EclLongitudeSun)) * math.sin(math.radians(23.44)) ))\n",
-    "    # Normalize Declination\n",
-    "    #DeclinationSun = NormalizeSymmetricallyBoundedPI_2(DeclinationSun)\n",
-    "\n",
-    "    # 6./b Declination of the Sun (δ) (Astronomy Answers)\n",
+    "    # 6. Declination of the Sun (δ)\n",
     "    # PlanetD_1, PlanetD_3 and PlanetD_5 (measured in degrees) are coefficients in the series expansion of the Sun's Declination.\n",
     "    # They varie for different planets in the Solar System.\n",
     "    # DeclinationSun = PlanetD_1 * sin(EclLongitudeSun) + PlanetD_3 * (sin(EclLongitudeSun))^3 + PlanetD_5 * (sin(EclLongitudeSun))^5\n",
