notebook updates for conversions

--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,11 +678,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Equ_I_To_Hor(Latitude, Declination, Right_Ascension, Local_Hour_Angle=None, Local_Sidereal_Time=None, Altitude=None):\n",
+    "def Equ_I_To_Hor(Latitude,\n",
+    "                 Declination,\n",
+    "                 Right_Ascension,\n",
+    "                 Local_Hour_Angle=None,\n",
+    "                 Local_Sidereal_Time=None,\n",
+    "                 Altitude=None):\n",
     "\n",
     "    # Initial Data Normalization\n",
     "    # Latitude: [-π/2,+π/2]\n",
@@ -761,8 +766,8 @@
     "            Azimuth = Azimuth_2\n",
     "\n",
     "        else:\n",
-    "            print('Something\\'s aren\\'t right...:\\n')\n",
-    "            print(Azimuth1, Azimuth2, Azimuth3, Azimuth4)\n",
+    "            print('Something\\'s not right...:\\n')\n",
+    "            print(Azimuth_1, Azimuth_2, Azimuth_3, Azimuth_4)\n",
     "\n",
     "        # Normalize Azimuth\n",
     "        # Azimuth: [0,+2π[\n",
@@ -782,123 +787,120 @@
     "                  (np.cos(np.radians(Declination)) *\n",
     "                   np.cos(np.radians(Latitude))))\n",
     "        if(LHAcos <= 1 and LHAcos >= -1):\n",
-    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(LHAcos))\n",
+    "            Local_Hour_Angle_Degrees_1 = np.degrees(np.arccos(LHAcos))\n",
     "        elif(LHAcos > 1):\n",
-    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(1))\n",
+    "            Local_Hour_Angle_Degrees_1 = np.degrees(np.arccos(1))\n",
     "        elif(LHAcos < -1):\n",
-    "            LocalHourAngleDegrees1 = np.degrees(np.arccos(-1))\n",
+    "            Local_Hour_Angle_Degrees_1 = np.degrees(np.arccos(-1))\n",
     "        \n",
     "\n",
     "        # arccos(x) has two correct output on this interval\n",
-    "        LocalHourAngleDegrees2 = - LocalHourAngleDegrees1\n",
+    "        Local_Hour_Angle_Degrees_2 = - Local_Hour_Angle_Degrees_1\n",
     "\n",
     "        # Normalize LHAs:\n",
-    "        LocalHourAngleDegrees1 = Normalize_Zero_Bounded(LocalHourAngleDegrees1, 360)\n",
-    "        LocalHourAngleDegrees2 = Normalize_Zero_Bounded(LocalHourAngleDegrees2, 360)\n",
+    "        Local_Hour_Angle_Degrees_1, _ = Normalize_Zero_Bounded(Local_Hour_Angle_Degrees_1, 360)\n",
+    "        Local_Hour_Angle_Degrees_2, _ = Normalize_Zero_Bounded(Local_Hour_Angle_Degrees_2, 360)\n",
     "\n",
+    "        #\n",
     "        # Calculate Azimuth (A) for both Local Hour Angles!\n",
-    "        # Calculate Azimuth (A) for FIRST LOCAK HOUR ANGLE\n",
+    "        #\n",
+    "        # First calculate Azimuth (A) for FIRST LOCAL HOUR ANGLE\n",
     "        # sin(A) = - sin(H) * cos(δ) / cos(m)\n",
     "        # Azimuth at given H Local Hour Angle\n",
-    "        Azimuth1_1 = np.degrees(np.arcsin(\n",
-    "                     - np.sin(np.radians(LocalHourAngleDegrees2)) *\n",
-    "                     np.cos(np.radians(Declination)) /\n",
-    "                     np.cos(np.radians(Altitude))\n",
-    "                     ))\n",
+    "        Azimuth_1_1 = np.degrees(np.arcsin(\n",
+    "                      - np.sin(np.radians(Local_Hour_Angle_Degrees_1)) *\n",
+    "                      np.cos(np.radians(Declination)) /\n",
+    "                      np.cos(np.radians(Altitude))\n",
+    "                      ))\n",
     "\n",
-    "        Azimuth1_1 = Normalize_Zero_Bounded(Azimuth1_1, 360)\n",
+    "        Azimuth_1_1, _ = Normalize_Zero_Bounded(Azimuth_1_1, 360)\n",
     "\n",
-    "        if(Azimuth1_1 <= 180):\n",
-    "            Azimuth1_2 = 180 - Azimuth1_1\n",
+    "        if(Azimuth_1_1 <= 180):\n",
+    "            Azimuth1_2 = 180 - Azimuth_1_1\n",
     "\n",
-    "        elif(Azimuth1_1 > 180):\n",
-    "            Azimuth1_2 = 540 - Azimuth1_1\n",
+    "        elif(Azimuth_1_1 > 180):\n",
+    "            Azimuth_1_2 = 540 - Azimuth_1_1\n",
     "\n",
     "        # Calculate Azimuth (A) with a second method, to determine which one is the correct (A1_1 or A1_2?)\n",
     "        # cos(A) = (sin(δ) - sin(φ) * sin(m)) / (cos(φ) * cos(m))\n",
-    "        Azimuth1_3 = np.degrees(np.arccos(\n",
-    "                (np.sin(np.radians(Declination)) - np.sin(np.radians(Latitude)) * np.sin(np.radians(Altitude))) / \n",
-    "                (np.cos(np.radians(Latitude)) * np.cos(np.radians(Altitude)))\n",
-    "        ))\n",
+    "        Azimuth_1_3 = np.degrees(np.arccos(\n",
+    "                    (np.sin(np.radians(Declination)) - np.sin(np.radians(Latitude)) * np.sin(np.radians(Altitude))) / \n",
+    "                    (np.cos(np.radians(Latitude)) * np.cos(np.radians(Altitude)))\n",
+    "                    ))\n",
     "\n",
-    "        Azimuth1_4 = - Azimuth1_3\n",
+    "        Azimuth_1_4 = - Azimuth_1_3\n",
     "\n",
     "        # Normalize negative result\n",
     "        # Azimuth: [0,+2π[\n",
-    "        Azimuth1_4 = Normalize_Zero_Bounded(Azimuth1_4, 360)\n",
+    "        Azimuth_1_4, _ = Normalize_Zero_Bounded(Azimuth_1_4, 360)\n",
     "\n",
     "        # Compare Azimuth values\n",
-    "        if(Azimuth1_1 + 3 > Azimuth1_3 and Azimuth1_1 - 3 < Azimuth1_3):\n",
-    "            Azimuth1 = Azimuth1_1\n",
+    "        if(np.abs(Azimuth_1_1 - Azimuth_1_3) < 3 or\n",
+    "           np.abs(Azimuth_1_1 - Azimuth_1_4) < 3):\n",
+    "            \n",
+    "            Azimuth_First = Azimuth_1_1\n",
     "\n",
-    "        elif(Azimuth1_1 + 3 > Azimuth1_4 and Azimuth1_1 - 3 < Azimuth1_4):\n",
-    "            Azimuth1 = Azimuth1_1\n",
-    "\n",
-    "        elif(Azimuth1_2 + 3 > Azimuth1_3 and Azimuth1_2 - 3 < Azimuth1_3):\n",
-    "            Azimuth1 = Azimuth1_2\n",
-    "\n",
-    "        elif(Azimuth1_2 + 3 > Azimuth1_4 and Azimuth1_2 - 3 < Azimuth1_4):\n",
-    "            Azimuth1 = Azimuth1_2\n",
+    "        elif(np.abs(Azimuth_1_2 - Azimuth_1_3) < 3 or\n",
+    "             np.abs(Azimuth_1_2 - Azimuth_1_4) < 3):\n",
+    "            \n",
+    "            Azimuth_First = Azimuth_1_2\n",
     "\n",
     "        else:\n",
-    "            print(Azimuth1_1, Azimuth1_2, Azimuth1_3, Azimuth1_4)\n",
+    "            print('Something\\'s not right...:\\n')\n",
+    "            print(Azimuth_1_1, Azimuth_1_2, Azimuth_1_3, Azimuth_1_4)\n",
     "\n",
-    "        # Calculate Azimuth (A) for SECOND LOCAL HOUR ANGLE\n",
+    "        # Now calculate Azimuth (A) for SECOND LOCAL HOUR ANGLE\n",
     "        # sin(A) = - sin(H) * cos(δ) / cos(m)\n",
     "        # Azimuth at given H Local Hour Angle\n",
-    "        Azimuth2_1 = np.degrees(np.arcsin(\n",
-    "                     - np.sin(np.radians(LocalHourAngleDegrees1)) *\n",
-    "                     np.cos(np.radians(Declination)) /\n",
-    "                     np.cos(np.radians(Altitude))\n",
+    "        Azimuth_2_1 = np.degrees(np.arcsin(\n",
+    "                      - np.sin(np.radians(Local_Hour_Angle_Degrees_2)) *\n",
+    "                      np.cos(np.radians(Declination)) /\n",
+    "                      np.cos(np.radians(Altitude))\n",
+    "                      ))\n",
+    "\n",
+    "        Azimuth_2_1, _ = Normalize_Zero_Bounded(Azimuth_2_1, 360)\n",
+    "\n",
+    "        if(Azimuth_2_1 <= 180):\n",
+    "            Azimuth_2_2 = 180 - Azimuth_2_1\n",
+    "\n",
+    "        elif(Azimuth_2_1 > 180):\n",
+    "            Azimuth_2_2 = 540 - Azimuth_2_1\n",
+    "\n",
+    "        # Calculate Azimuth (A) with a second method, to determine which one is the correct (Azimuth_2_1 or Azimuth_2_2?)\n",
+    "        # cos(A) = (sin(δ) - sin(φ) * sin(m)) / (cos(φ) * cos(m))\n",
+    "        Azimuth_2_3 = np.degrees(np.arccos(\n",
+    "                     (np.sin(np.radians(Declination)) -\n",
+    "                      np.sin(np.radians(Latitude)) *\n",
+    "                      np.sin(np.radians(Altitude))) / \n",
+    "                     (np.cos(np.radians(Latitude)) *\n",
+    "                      np.cos(np.radians(Altitude)))\n",
     "                     ))\n",
     "\n",
-    "        Azimuth2_1 = Normalize_Zero_Bounded(Azimuth2_1, 360)\n",
-    "\n",
-    "        if(Azimuth2_1 <= 180):\n",
-    "            Azimuth2_2 = 180 - Azimuth2_1\n",
-    "\n",
-    "        elif(Azimuth2_1 > 180):\n",
-    "            Azimuth2_2 = 540 - Azimuth2_1\n",
-    "\n",
-    "        # Calculate Azimuth (A) with a second method, to determine which one is the correct (A2_1 or A2_2?)\n",
-    "        # cos(A) = (sin(δ) - sin(φ) * sin(m)) / (cos(φ) * cos(m))\n",
-    "        Azimuth2_3 = np.degrees(np.arccos(\n",
-    "                    (np.sin(np.radians(Declination)) -\n",
-    "                     np.sin(np.radians(Latitude)) *\n",
-    "                     np.sin(np.radians(Altitude))) / \n",
-    "                    (np.cos(np.radians(Latitude)) *\n",
-    "                     np.cos(np.radians(Altitude)))\n",
-    "        ))\n",
-    "\n",
-    "        Azimuth2_4 = - Azimuth2_3\n",
+    "        Azimuth_2_4 = - Azimuth_2_3\n",
     "\n",
     "        # Normalize negative result\n",
     "        # Azimuth: [0,+2π[\n",
-    "        Azimuth2_4 = Normalize_Zero_Bounded(Azimuth2_4, 360)\n",
+    "        Azimuth_2_4, _ = Normalize_Zero_Bounded(Azimuth_2_4, 360)\n",
     "\n",
     "        # Compare Azimuth values\n",
-    "        if(Azimuth2_1 + 3 > Azimuth2_3 and Azimuth2_1 - 3 < Azimuth2_3):\n",
-    "            Azimuth2 = Azimuth2_1\n",
+    "        if(np.abs(Azimuth_2_1 - Azimuth_2_3) < 3 or\n",
+    "           np.abs(Azimuth_2_1 - Azimuth_2_4) < 3):\n",
+    "            Azimuth_2 = Azimuth_2_1\n",
     "\n",
-    "        elif(Azimuth2_1 + 3 > Azimuth2_4 and Azimuth2_1 - 3 < Azimuth2_4):\n",
-    "            Azimuth2 = Azimuth2_1\n",
-    "\n",
-    "        elif(Azimuth2_2 + 3 > Azimuth2_3 and Azimuth2_2 - 3 < Azimuth2_3):\n",
-    "            Azimuth2 = Azimuth2_2\n",
-    "\n",
-    "        elif(Azimuth2_2 + 3 > Azimuth2_4 and Azimuth2_2 - 3 < Azimuth2_4):\n",
-    "            Azimuth2 = Azimuth2_2\n",
+    "        elif(np.abs(Azimuth_2_2 - Azimuth_2_3) < 3 or\n",
+    "             np.abs(Azimuth_2_2 - Azimuth_2_4) < 3):\n",
+    "            Azimuth_Second = Azimuth_2_2\n",
     "\n",
     "        else:\n",
-    "            print(Azimuth2_1, Azimuth2_2, Azimuth2_3, Azimuth2_4)\n",
-    "\n",
+    "            print('Something\\'s not right...:\\n')\n",
+    "            print(Azimuth_2_1, Azimuth_2_2, Azimuth_2_3, Azimuth_2_4)\n",
     "\n",
     "        # Calculate time between them\n",
     "        # Use precalculated LHAs\n",
     "        # H_dil is the time, as long as the Object stays above the Horizon\n",
-    "        H_dil = abs(LocalHourAngleDegrees1 - LocalHourAngleDegrees2)\n",
+    "        H_dil = np.abs(Local_Hour_Angle_Degrees_1 - Local_Hour_Angle_Degrees_2)\n",
     "\n",
-    "        return(Altitude, Azimuth1, Azimuth2, H_dil)"
+    "        return(Azimuth_First, Azimuth_Second, H_dil)"
    ]
   },
   {
@@ -910,18 +912,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def EquIToEquII(RightAscension, LocalHourAngle):\n",
+    "def Equ_I_To_Equ_II(Right_Ascension, Local_Hour_Angle):\n",
     "    \n",
-    "    LocalSiderealTime = LocalHourAngle + RightAscension\n",
+    "    Local_Sidereal_Time = Local_Hour_Angle + Right_Ascension\n",
     "    # Normalize LMST\n",
     "    # LMST: [0,24h[\n",
-    "    LocalSiderealTime = NormalizeZeroBounded(LocalSiderealTime, 24)\n",
+    "    Local_Sidereal_Time, _ = Normalize_Zero_Bounded(Local_Sidereal_Time, 24)\n",
     "\n",
-    "    return(LocalSiderealTime)"
+    "    return(Local_Sidereal_Time)"
    ]
   },
   {
@@ -933,29 +935,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def EquIIToEquI(LocalSiderealTime, RightAscension, LocalHourAngle):\n",
+    "def Equ_II_To_Equ_I(Local_Sidereal_Time,\n",
+    "                    Right_Ascension,\n",
+    "                    Local_Hour_Angle):\n",
     "\n",
     "    # Calculate Right Ascension or Local Mean Sidereal Time\n",
     "    if(RightAscension != None and LocalHourAngle == None):\n",
-    "        LocalHourAngle = LocalSiderealTime - RightAscension\n",
+    "        Local_Hour_Angle = Local_Sidereal_Time - Right_Ascension\n",
     "        # Normalize LHA\n",
     "        # LHA: [0,24h[\n",
-    "        LocalHourAngle = NormalizeZeroBounded(LocalHourAngle, 24)\n",
+    "        Local_Hour_Angle, _ = Normalize_Zero_Bounded(Local_Hour_Angle, 24)\n",
     "\n",
     "    elif(RightAscension == None and LocalHourAngle != None):\n",
-    "        RightAscension = LocalSiderealTime - LocalHourAngle\n",
+    "        Right_Ascension = Local_Sidereal_Time - Local_Hour_Angle\n",
     "        # Normalize Right Ascension\n",
     "        # Right Ascension: [0,24h[\n",
-    "        RightAscension = NormalizeZeroBounded(RightAscension, 24)\n",
+    "        Right_Ascension, _ = Normalize_Zero_Bounded(Right_Ascension, 24)\n",
     "\n",
     "    else:\n",
     "        pass\n",
     "\n",
-    "    return(LocalHourAngle, RightAscension)"
+    "    return(Local_Hour_Angle, Right_Ascension)"
    ]
   },
   {
@@ -967,44 +971,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def EquIIToHor(Latitude, RightAscension, Declination, Altitude, Azimuth, LocalSiderealTime, LocalHourAngle):\n",
+    "def Equ_II_To_Hor(Latitude,\n",
+    "                  Declination,\n",
+    "                  Right_Ascension,\n",
+    "                  Local_Hour_Angle,\n",
+    "                  Local_Sidereal_Time,\n",
+    "                  Altitude,\n",
+    "                  Azimuth):\n",
     "\n",
     "    # Initial Data Normalization\n",
-    "    # Latitude: [-π,+π]\n",
+    "    # Latitude: [-π/2,+π/2]\n",
     "    # Local Mean Sidereal Time: [0h,24h[\n",
     "    # Local Hour Angle: [0h,24h[\n",
     "    # Right Ascension: [0h,24h[\n",
     "    # Declination: [-π/2,+π/2]\n",
-    "    Latitude = NormalizeSymmetricallyBoundedPI(Latitude)\n",
-    "    LocalSiderealTime = NormalizeZeroBounded(LocalSiderealTime, 24)\n",
+    "    Latitude = Normalize_Symmetrically_Bounded_PI_2(Latitude)\n",
+    "    Local_Sidereal_Time, _ = Normalize_Zero_Bounded(Local_Sidereal_Time, 24)\n",
     "    \n",
-    "    if(RightAscension == None and LocalHourAngle != None):\n",
-    "        LocalHourAngle = NormalizeZeroBounded(LocalHourAngle, 24)\n",
+    "    if(Right_Ascension == None and Local_Hour_Angle != None):\n",
+    "        Local_Hour_Angle, _ = Normalize_Zero_Bounded(Local_Hour_Angle, 24)\n",
     "\n",
-    "    elif(RightAscension != None and LocalHourAngle == None):\n",
-    "        RightAscension = NormalizeZeroBounded(RightAscension, 24)\n",
+    "    elif(Right_Ascension != None and Local_Hour_Angle == None):\n",
+    "        Right_Ascension, _ = Normalize_Zero_Bounded(Right_Ascension, 24)\n",
     "    \n",
-    "    Declination = NormalizeSymmetricallyBoundedPI_2(Declination)\n",
+    "    Declination = Normalize_Symmetrically_Bounded_PI_2(Declination)\n",
     "\n",
     "    # Convert Equatorial II to Equatorial I\n",
-    "    LocalHourAngle, RightAscension = EquIIToEquI(LocalSiderealTime, RightAscension, LocalHourAngle)\n",
+    "    Local_Hour_Angle, Right_Ascension = Equ_II_To_Equ_I(Local_Sidereal_Time,\n",
+    "                                                        Right_Ascension,\n",
+    "                                                        Local_Hour_Angle)\n",
     "\n",
     "    # Normalization of Output Data\n",
-    "    LocalHourAngle = NormalizeZeroBounded(LocalHourAngle, 24)\n",
-    "    RightAscension = NormalizeZeroBounded(RightAscension, 24)\n",
+    "    Local_Hour_Angle, _ = Normalize_Zero_Bounded(Local_Hour_Angle, 24)\n",
+    "    Right_Ascension, _ = Normalize_Zero_Bounded(Right_Ascension, 24)\n",
     "\n",
     "    # Convert Equatorial I to Horizontal\n",
-    "    Altitude, Azimuth = EquIToHor(Latitude, RightAscension, Declination, Altitude, LocalSiderealTime, LocalHourAngle)\n",
+    "    Altitude, Azimuth = Equ_I_To_Hor(Latitude,\n",
+    "                                     Declination,\n",
+    "                                     Right_Ascension,\n",
+    "                                     Local_Hour_Angle,\n",
+    "                                     Local_Sidereal_Time,\n",
+    "                                     Altitude)\n",
     "\n",
     "    # Normalization of Output Data\n",
     "    # Altitude: [-π/2,+π/2]\n",
     "    # Azimuth: [0,+2π[\n",
-    "    Altitude = NormalizeSymmetricallyBoundedPI_2(Altitude)\n",
-    "    Azimuth = NormalizeZeroBounded(Azimuth, 360)\n",
+    "    Altitude = Normalize_Symmetrically_Bounded_PI_2(Altitude)\n",
+    "    Azimuth, _ = Normalize_Zero_Bounded(Azimuth, 360)\n",
     "\n",
     "    return(Altitude, Azimuth)"
    ]
