sunset/rise updates

--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,9 @@
     "# It's Usually Labeled as dS/dm\n",
     "# We Simply Label It as dS\n",
     "dS = 1.002737909350795\n",
+    "\n",
+    "# J_2000 is midnight or the beginning of the equivalent Julian year reference\n",
+    "J_2000 = 2451545\n",
     "\n",
     "# Months' length int days, without leap day\n",
     "Month_Length_List = [31,28,31,30,31,30,31,31,30,31,30,31]\n",
@@ -193,7 +196,7 @@
     "    \"VYCanisMajoris\": [7.38287, -25.767565]\n",
     "}\n",
     "\n",
-    "PlanetDict = {\n",
+    "Planet_Dict = {\n",
     "    \"Mercury\": \"Mercury\",\n",
     "    \"Venus\": \"Venus\",\n",
     "    \"Earth\": \"Earth\",\n",
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,6 +545,8 @@
     "           (36525 * x_2) / 100 +\n",
     "           (153 * x_1 + 2) / 5) + United_Date_Time[3] + 1721119\n",
     "    \n",
+    "    print(JDN)\n",
+    "    \n",
     "    # 2. Unknown\n",
     "    # Integer divisions should be used everywhere (it means that the remainders of all divisions are dropped)\n",
     "    '''JDN = (367 * int(United_Date_Time[1]) -\n",
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,8 +1225,8 @@
     "    \n",
     "    # 1. Solar Mean Anomaly\n",
     "    # Mean_Anomaly (M) is the Solar Mean Anomaly used in a few of next equations\n",
-    "    # Mean_Anomaly = (M_0 + M_1 * (Julian_Date - J2000)) and norm to 360\n",
-    "    Mean_Anomaly = Orbit_Dict[Planet + \"M\"][0] + Orbit_Dict[Planet + \"M\"][1] * (Julian_Date - 2451545)\n",
+    "    # Mean_Anomaly = (M_0 + M_1 * (Julian_Date - J_2000)) and norm to 360\n",
+    "    Mean_Anomaly = Orbit_Dict[Planet + \"M\"][0] + Orbit_Dict[Planet + \"M\"][1] * (Julian_Date - J_2000)\n",
     "    # Normalize Result\n",
     "    Mean_Anomaly, _ = Normalize_Zero_Bounded(Mean_Anomaly, 360)\n",
     "\n",
@@ -1273,51 +1278,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Solar_Transit(Planet,\n",
-    "                  Longitude,\n",
-    "                  Julian_Date):\n",
-    "    \n",
-    "    # 1. Orbital parameters of Sun\n",
-    "    (Right_Ascension_Sun,\n",
-    "    Declination_Sun,\n",
-    "    Mean_Anomaly,\n",
-    "    Equation_Of_Center,\n",
-    "    Ecl_Longitude_Sun,\n",
-    "    Mean_Ecl_Longitude_Sun) = Coordinates_Of_Sun(Planet,\n",
-    "                                                 Longitude,\n",
-    "                                                 Julian_Date)\n",
-    "    \n",
-    "    # 2. Mean Solar Noon\n",
-    "    # J_Anomaly is an approximation of Mean Solar Time at W_Longitude expressed as a Julian day with the day fraction\n",
-    "    # W_Longitude is the longitude, west from the observer on the planet (west is positive, east is negative)\n",
-    "    W_Longitude = - Longitude\n",
-    "    J_Anomaly = (Julian_Date - Orbit_Dict[Planet + \"J\"][0]) / Orbit_Dict[Planet + \"J\"][3] - W_Longitude/360\n",
-    "    \n",
-    "    # 3. Solar Transit\n",
-    "    # Jtransit is the Julian date for the Local True Solar Transit (or Solar Noon)\n",
-    "    # 2451545.5 is midnight or the beginning of the equivalent Julian year reference\n",
-    "    # Jtransit = J_x + 0.0053 * sin(Mean_Anomaly) - 0.0068 * sin(2 * L_sun)\n",
-    "    # \"0.0053 * sin(Mean_Anomaly) - 0.0069 * sin(2 * Ecl_Longitude_Sun)\"  is a simplified version of the equation of time\n",
-    "    J_x = (Julian_Date + 2451545) + Orbit_Dict[Planet + \"J\"][3] * (Julian_Date - J_Anomaly)\n",
-    "    J_transit = (J_x +\n",
-    "                 Orbit_Dict[Planet + \"J\"][1] * np.sin(np.radians(Mean_Anomaly)) +\n",
-    "                 Orbit_Dict[Planet + \"J\"][2] * np.sin(np.radians(2 * Mean_Ecl_Longitude_Sun)))\n",
-    "    \n",
-    "    return(Right_Ascension_Sun,\n",
-    "           Declination_Sun,\n",
-    "           Mean_Anomaly,\n",
-    "           Equation_Of_Center,\n",
-    "           Ecl_Longitude_Sun,\n",
-    "           Mean_Ecl_Longitude_Sun,\n",
-    "           J_transit)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1326,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,12 +1344,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solar transit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Solar_Transit(Planet,\n",
+    "                  Latitude,\n",
+    "                  Longitude,\n",
+    "                  Altitude_Of_Sun,\n",
+    "                  Julian_Date):\n",
+    "    \n",
+    "    # 1. Orbital parameters of Sun\n",
+    "    (Right_Ascension_Sun,\n",
+    "    Declination_Sun,\n",
+    "    Mean_Anomaly,\n",
+    "    Equation_Of_Center,\n",
+    "    Ecl_Longitude_Sun,\n",
+    "    Mean_Ecl_Longitude_Sun) = Coordinates_Of_Sun(Planet,\n",
+    "                                                 Longitude,\n",
+    "                                                 Julian_Date)\n",
+    "    \n",
+    "    # 2. Mean Solar Noon\n",
+    "    # J_Anomaly is an approximation of Mean Solar Time at W_Longitude expressed as a Julian day with the day fraction\n",
+    "    # W_Longitude is the longitude, west from the observer on the planet (west is positive, east is negative)\n",
+    "    W_Longitude = - Longitude\n",
+    "    n_x = (Julian_Date - J_2000 - Orbit_Dict[Planet + \"J\"][0]) / Orbit_Dict[Planet + \"J\"][3] - W_Longitude/360\n",
+    "    n = np.round(n_x, 0) \n",
+    "    \n",
+    "    # 3. Solar Transit\n",
+    "    # Jtransit is the Julian date for the Local True Solar Transit (or Solar Noon)\n",
+    "    # Jtransit = J_x + 0.0053 * sin(Mean_Anomaly) - 0.0068 * sin(2 * L_sun)\n",
+    "    # \"0.0053 * sin(Mean_Anomaly) - 0.0069 * sin(2 * Ecl_Longitude_Sun)\"  is a simplified version of the equation of time\n",
+    "    J_x = Julian_Date + Orbit_Dict[Planet + \"J\"][3] * (n - n_x)\n",
+    "    J_transit = (J_x +\n",
+    "                 Orbit_Dict[Planet + \"J\"][1] * np.sin(np.radians(Mean_Anomaly)) +\n",
+    "                 Orbit_Dict[Planet + \"J\"][2] * np.sin(np.radians(2 * Mean_Ecl_Longitude_Sun)))\n",
+    "    \n",
+    "    print(J_transit)\n",
+    "    \n",
+    "    \n",
+    "    # 4. Greater precision\n",
+    "    i = 0\n",
+    "    while(i < 1000):\n",
+    "        (Right_Ascension_Sun,\n",
+    "        Declination_Sun,\n",
+    "        Mean_Anomaly,\n",
+    "        Equation_Of_Center,\n",
+    "        Ecl_Longitude_Sun,\n",
+    "        Mean_Ecl_Longitude_Sun) = Coordinates_Of_Sun(Planet,\n",
+    "                                                     Longitude,\n",
+    "                                                     J_transit)\n",
+    "\n",
+    "        Local_Hour_Angle_Sun = Suns_Local_Hour_Angle(Planet,\n",
+    "                                                     Latitude,\n",
+    "                                                     Declination_Sun,\n",
+    "                                                     Ecl_Longitude_Sun,\n",
+    "                                                     Altitude_Of_Sun)\n",
+    "\n",
+    "        J_transit -= Local_Hour_Angle_Sun/360 * Orbit_Dict[Planet + \"J\"][3]\n",
+    "        \n",
+    "        i += 1\n",
+    "    \n",
+    "    return(Right_Ascension_Sun,\n",
+    "           Declination_Sun,\n",
+    "           Mean_Anomaly,\n",
+    "           Equation_Of_Center,\n",
+    "           Ecl_Longitude_Sun,\n",
+    "           Mean_Ecl_Longitude_Sun,\n",
+    "           Local_Hour_Angle_Sun,\n",
+    "           J_transit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Calculate Sunrise and Sunset's Datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,24 +1439,19 @@
     "                          Altitude_Of_Sun,\n",
     "                          J_Time):\n",
     "\n",
-    "    # 1. Orbital coordinates of Sun and Julian Date of solar transit\n",
+    "    # Orbital coordinates of Sun and Julian Date of solar transit\n",
     "    (Right_Ascension_Sun,\n",
     "    Declination_Sun,\n",
     "    Mean_Anomaly,\n",
     "    Equation_Of_Center,\n",
     "    Ecl_Longitude_Sun,\n",
     "    Mean_Ecl_Longitude_Sun,\n",
+    "    Local_Hour_Angle_Sun,\n",
     "    J_transit) = Solar_Transit(Planet,\n",
-    "                              Longitude,\n",
-    "                              J_Time)\n",
-    "    \n",
-    "    \n",
-    "    # 2. Local Hour Angle of Sun\n",
-    "    Local_Hour_Angle_Sun = Suns_Local_Hour_Angle(Planet,\n",
-    "                                                 Latitude,\n",
-    "                                                 Declination_Sun,\n",
-    "                                                 Ecl_Longitude_Sun,\n",
-    "                                                 Altitude_Of_Sun)\n",
+    "                               Latitude,\n",
+    "                               Longitude,\n",
+    "                               Altitude_Of_Sun,\n",
+    "                               J_Time)\n",
     "\n",
     "    return(Local_Hour_Angle_Sun)"
    ]
@@ -1430,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,26 +1492,21 @@
     "    Equation_Of_Center,\n",
     "    Ecl_Longitude_Sun,\n",
     "    Mean_Ecl_Longitude_Sun,\n",
+    "    Local_Hour_Angle_Sun,\n",
     "    J_transit) = Solar_Transit(Planet,\n",
+    "                               Latitude,\n",
     "                               Longitude,\n",
+    "                               Altitude_Of_Sun,\n",
     "                               Julian_Date)\n",
-    "    \n",
-    "    \n",
-    "    # 2. Local Hour Angle of Sun\n",
-    "    Local_Hour_Angle_Sun = Suns_Local_Hour_Angle(Planet,\n",
-    "                                                 Latitude,\n",
-    "                                                 Declination_Sun,\n",
-    "                                                 Ecl_Longitude_Sun,\n",
-    "                                                 Altitude_Of_Sun)\n",
     "\n",
     "    \n",
-    "    # 3. Rising and setting datetimes of the Sun\n",
+    "    # 2. Rising and setting datetimes of the Sun\n",
     "    # JRise is the actual Julian date of sunrise\n",
     "    # JSet is the actual Julian date of sunset\n",
     "    J_Rise = J_transit - Local_Hour_Angle_Sun / 360 * Orbit_Dict[Planet + \"J\"][3]\n",
     "    J_Set = J_transit + Local_Hour_Angle_Sun / 360 * Orbit_Dict[Planet + \"J\"][3]\n",
     "    \n",
-    "    # 4. Apply corrections\n",
+    "    # 3. Apply corrections\n",
     "    '''while(1):\n",
     "        # Rise\n",
     "        Local_Hour_Angle_Sun_Corr = Calculate_Corrections(Planet,\n",
@@ -1519,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,25 +1775,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Years=2018\n",
+    "Months=12\n",
+    "Days=29"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
+   "execution_count": 140,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rise: 4910026.610194801 set: 4910026.963287431\n",
-      "rise: 14.644675232470036\n",
-      "set: 23.11889833956957\n",
-      "Sun's rising at altitude 0° on 2018.12.29. is at 15:38:40\n",
-      "Sun's setting at altitude 0° on 2018.12.30. is at 0:7:8\n"
+      "2458481.8375\n",
+      "2458481.9492411157\n",
+      "rise: 9.529738001525402\n",
+      "set: 23.30087783932686\n",
+      "Sun's rising at altitude 0° on 2018.12.29. is at 10:31:47\n",
+      "Sun's setting at altitude 0° on 2018.12.30. is at 0:18:3\n"
      ]
     }
    ],
@@ -1771,9 +1808,9 @@
     "Local_Time_for_Sun_at_Altitude(Planet='Earth',\n",
     "                               Latitude=Location_Dict[\"Budapest\"][0],\n",
     "                               Longitude=Location_Dict[\"Budapest\"][1],\n",
-    "                               Local_Date_Year=2018,\n",
-    "                               Local_Date_Month=12,\n",
-    "                               Local_Date_Day=29,\n",
+    "                               Local_Date_Year=Years,\n",
+    "                               Local_Date_Month=Months,\n",
+    "                               Local_Date_Day=Days,\n",
     "                               Altitude_Of_Sun=0)"
    ]
   },
@@ -1786,14 +1823,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.569053561058215 -23.207124476886268\n"
+      "2458481.8375\n",
+      "6936.5\n",
+      "23.779723467931245 -1.4314289021785456\n"
      ]
     }
    ],
@@ -1807,23 +1846,23 @@
     "                                              Longitude=19.0402,\n",
     "                                             Julian_Date=Calculate_Julian_Date(Longitude=19.0402,\n",
     "                                                                               Local_Time=(23 + 33/60),\n",
-    "                                                                               Local_Date_Year=2018,\n",
-    "                                                                               Local_Date_Month=12,\n",
-    "                                                                               Local_Date_Day=29))\n",
+    "                                                                               Local_Date_Year=Years,\n",
+    "                                                                               Local_Date_Month=Months,\n",
+    "                                                                               Local_Date_Day=Days))\n",
     "\n",
     "print(Right_Ascension_Sun, Declination_Sun)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "234.32028794953817 125.67971205046176\n"
+      "267.8810393561629 92.11896064383707\n"
      ]
     }
    ],
@@ -1837,6 +1876,13 @@
     "\n",
     "print(Azimuth_First, Azimuth_Second)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
