some updates and check

--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -84,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Current Version of the Csillész II Problem Solver\n",
-    "ActualVersion = 'v1.33'"
+    "current_version = 'v1.33'"
    ]
   },
   {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,19 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Normalize_Zero_Bounded(Parameter, Non_Zero_Bound):\n",
     "\n",
     "    if(Parameter >= Non_Zero_Bound):\n",
-    "        Multiply = int(Parameter / Non_Zero_Bound)\n",
-    "        Parameter = Parameter - Multiply * Non_Zero_Bound\n",
+    "        Multiply = Parameter // Non_Zero_Bound\n",
+    "        Parameter -= Multiply * Non_Zero_Bound\n",
     "\n",
     "    elif(Parameter < 0):\n",
-    "        Multiply = int(Parameter / Non_Zero_Bound)\n",
-    "        Parameter = Parameter + (np.abs(Multiply) + 1) * Non_Zero_Bound\n",
+    "        Multiply = Parameter // Non_Zero_Bound\n",
+    "        Parameter += (np.abs(Multiply) + 1) * Non_Zero_Bound\n",
     "        \n",
     "    else:\n",
     "        Multiply = 0\n",
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "def Normalize_Symmetrically_Bounded_PI_2(Parameter):\n",
-    "    \n",
+    "\n",
     "    if(Parameter < 0 or Parameter >= 360):\n",
     "        Parameter, _ = Normalize_Zero_Bounded(Parameter, 360)\n",
     "\n",
